# e-sign-server

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  start.sh
mcp_server/: server.py
server/: app.py  config.py  database.py  pdf_handler.py
static/css/: style.css
static/js/: sign.js
templates/: already_signed.html  expired.html  sign.html
